Added security features and configuration to backend services