@@ -1,18 +1,21 @@
 package com.aieap.platform.ai;
 
+import com.aieap.platform.ai.domain.ChatSession;
+import com.aieap.platform.ai.service.ChatPersistenceService;
 import com.aieap.platform.common.ApiEnvelope;
 import com.aieap.platform.common.ResponseFactory;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import java.time.OffsetDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -28,66 +31,154 @@ import org.springframework.web.server.ResponseStatusException;
 @Tag(name = "AI Agent")
 @RequestMapping("/ai")
 public class AiController {
-    private final ConcurrentHashMap<String, ChatConversation> conversations = new ConcurrentHashMap<>();
+    private final ChatPersistenceService chatPersistenceService;
     private final AiChatService aiChatService;
+    private final ObjectMapper objectMapper;
 
-    public AiController(AiChatService aiChatService) {
+    public AiController(
+        ChatPersistenceService chatPersistenceService,
+        AiChatService aiChatService,
+        ObjectMapper objectMapper
+    ) {
+        this.chatPersistenceService = chatPersistenceService;
         this.aiChatService = aiChatService;
-        List<ChatMessage> messages = new ArrayList<>();
-        messages.add(new ChatMessage("msg-1", "assistant", "Hello. I can summarize documents, extract tasks, and draft reports.", OffsetDateTime.now().minusMinutes(20)));
-        conversations.put("chat-1", new ChatConversation("chat-1", "Morning Ops Review", OffsetDateTime.now().minusMinutes(20), messages));
+        this.objectMapper = objectMapper;
     }
 
     @PostMapping("/chat")
-    public ApiEnvelope<ChatReply> chat(@Valid @RequestBody ChatRequest chatRequest, HttpServletRequest request) {
-        String chatId = chatRequest.chatId() == null || chatRequest.chatId().isBlank() ? UUID.randomUUID().toString() : chatRequest.chatId();
-        ChatConversation conversation = conversations.computeIfAbsent(chatId, id -> new ChatConversation(id, chatRequest.prompt().substring(0, Math.min(chatRequest.prompt().length(), 24)), OffsetDateTime.now(), new ArrayList<>()));
-        conversation.messages().add(new ChatMessage(UUID.randomUUID().toString(), "user", chatRequest.prompt(), OffsetDateTime.now()));
+    public ApiEnvelope<ChatReply> chat(
+        @Valid @RequestBody ChatRequest chatRequest,
+        JwtAuthenticationToken authentication,
+        HttpServletRequest request
+    ) {
+        UUID userId = extractUserId(authentication);
+        UUID chatId = chatRequest.chatId() == null || chatRequest.chatId().isBlank() 
+            ? UUID.randomUUID() 
+            : UUID.fromString(chatRequest.chatId());
 
+        // Get or create chat session
+        ChatSession session = chatPersistenceService.getChatSessionOrCreate(chatId, userId, chatRequest.prompt());
+
+        // Load existing history BEFORE adding the new message so it isn't duplicated in context
+        List<ChatPersistenceService.ChatMessageDto> history = chatPersistenceService.getChatMessages(session.getId());
+        List<AiController.ChatMessage> messageHistory = history.stream()
+            .map(m -> new ChatMessage(m.id(), m.role(), m.content(), m.createdAt()))
+            .collect(Collectors.toList());
+
+        // Persist user message
+        chatPersistenceService.addMessage(session.getId(), "user", chatRequest.prompt(), "[]");
+
+        // Get AI response
         AiChatService.ChatResult chatResult = aiChatService.answer(
             chatRequest.mode(),
             chatRequest.prompt(),
             chatRequest.attachments(),
-            conversation.messages()
+            messageHistory
         );
 
-        String answer = chatResult.content();
-        ChatMessage assistantMessage = new ChatMessage(UUID.randomUUID().toString(), "assistant", answer, OffsetDateTime.now());
-        conversation.messages().add(assistantMessage);
+        // Save assistant message
+        String guardrailsJson;
+        try {
+            guardrailsJson = objectMapper.writeValueAsString(chatResult.guardrails());
+        } catch (Exception e) {
+            guardrailsJson = "[]";
+        }
+        com.aieap.platform.ai.domain.ChatMessage savedMessage = chatPersistenceService.addMessage(
+            session.getId(), 
+            "assistant", 
+            chatResult.content(), 
+            guardrailsJson,
+            chatResult.toolCallsJson(),
+            chatResult.metadataJson()
+        );
 
-        return ResponseFactory.success(request, new ChatReply(chatId, assistantMessage, chatResult.guardrails()));
+        ChatMessage reply = new ChatMessage(
+            savedMessage.getId().toString(),
+            savedMessage.getRole(),
+            savedMessage.getContent(),
+            savedMessage.getCreatedAt()
+        );
+
+        return ResponseFactory.success(request, new ChatReply(session.getId().toString(), reply, chatResult.guardrails()));
     }
 
     @GetMapping("/chats")
-    public ApiEnvelope<List<ChatSummary>> chats(HttpServletRequest request) {
-        List<ChatSummary> summaries = conversations.values().stream()
-            .map(conversation -> new ChatSummary(conversation.id(), conversation.title(), conversation.updatedAt(), conversation.messages().size()))
-            .toList();
+    public ApiEnvelope<List<ChatSummary>> chats(
+        JwtAuthenticationToken authentication,
+        HttpServletRequest request
+    ) {
+        UUID userId = extractUserId(authentication);
+        List<ChatSummary> summaries = chatPersistenceService.getUserChatSessions(userId).stream()
+            .map(session -> new ChatSummary(session.id(), session.title(), session.updatedAt(), session.messageCount()))
+            .collect(Collectors.toList());
         return ResponseFactory.success(request, summaries);
     }
 
     @GetMapping("/chats/{id}/messages")
-    public ApiEnvelope<List<ChatMessage>> messages(@PathVariable String id, HttpServletRequest request) {
-        return ResponseFactory.success(request, conversation(id).messages());
+    public ApiEnvelope<List<ChatMessage>> messages(
+        @PathVariable UUID id,
+        JwtAuthenticationToken authentication,
+        HttpServletRequest request
+    ) {
+        UUID userId = extractUserId(authentication);
+        chatPersistenceService.getChatSession(id, userId); // Verify access
+
+        List<ChatMessage> messages = chatPersistenceService.getChatMessages(id).stream()
+            .map(m -> new ChatMessage(m.id(), m.role(), m.content(), m.createdAt()))
+            .collect(Collectors.toList());
+        return ResponseFactory.success(request, messages);
     }
 
     @PostMapping("/chats/{id}/attachments")
     @ResponseStatus(HttpStatus.CREATED)
     public ApiEnvelope<AttachmentReceipt> attach(
-        @PathVariable String id,
+        @PathVariable UUID id,
         @Valid @RequestBody AttachmentRequest attachmentRequest,
+        JwtAuthenticationToken authentication,
         HttpServletRequest request
     ) {
-        conversation(id);
-        return ResponseFactory.success(request, new AttachmentReceipt(id, attachmentRequest.fileName(), attachmentRequest.contentType(), attachmentRequest.size(), "QUEUED"));
+        UUID userId = extractUserId(authentication);
+        chatPersistenceService.getChatSession(id, userId); // Verify access
+
+        UUID documentId = parseOptionalUuid(attachmentRequest.documentId());
+        String status = documentId == null ? "QUEUED" : "READY";
+        chatPersistenceService.addAttachment(
+            id,
+            attachmentRequest.fileName(),
+            attachmentRequest.contentType(),
+            attachmentRequest.size(),
+            documentId,
+            attachmentRequest.metadata() == null ? null : attachmentRequest.metadata().get("storagePath"),
+            status
+        );
+        return ResponseFactory.success(request, new AttachmentReceipt(id.toString(), attachmentRequest.fileName(), attachmentRequest.contentType(), attachmentRequest.size(), status));
     }
 
-    private ChatConversation conversation(String id) {
-        ChatConversation conversation = conversations.get(id);
-        if (conversation == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Chat not found");
+    // Helper methods
+    private UUID extractUserId(JwtAuthenticationToken authentication) {
+        if (authentication == null || authentication.getToken() == null) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication required");
         }
-        return conversation;
+        Object userIdClaim = authentication.getToken().getClaim("userId");
+        if (userIdClaim == null) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User ID not found in token");
+        }
+        try {
+            return UUID.fromString(userIdClaim.toString());
+        } catch (IllegalArgumentException ex) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Invalid user ID in token", ex);
+        }
+    }
+
+    private UUID parseOptionalUuid(String value) {
+        if (value == null || value.isBlank()) {
+            return null;
+        }
+        try {
+            return UUID.fromString(value);
+        } catch (IllegalArgumentException ex) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid documentId", ex);
+        }
     }
 
     public record ChatConversation(String id, String title, OffsetDateTime updatedAt, List<ChatMessage> messages) {
@@ -105,7 +196,13 @@ public class AiController {
     public record ChatSummary(String id, String title, OffsetDateTime updatedAt, int messageCount) {
     }
 
-    public record AttachmentRequest(@NotBlank String fileName, @NotBlank String contentType, long size, Map<String, String> metadata) {
+    public record AttachmentRequest(
+        @NotBlank String fileName,
+        @NotBlank String contentType,
+        long size,
+        String documentId,
+        Map<String, String> metadata
+    ) {
     }
 
     public record AttachmentReceipt(String chatId, String fileName, String contentType, long size, String status) {
